Bug 59783 - [IVB bisected] 3DMMES2.0 Taiji performance reduced by ~13% with gnome-session enable compositing
Summary: [IVB bisected] 3DMMES2.0 Taiji performance reduced by ~13% with gnome-session...
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: high major
Assignee: Ian Romanick
QA Contact:
URL:
Whiteboard:
Keywords:
: 62144 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-01-24 02:49 UTC by ye.tian
Modified: 2015-05-20 01:25 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
egl: Allow 24-bit visuals for 32-bit RGBA8888 configs (1.46 KB, patch)
2013-02-23 03:05 UTC, Ian Romanick
Details | Splinter Review

Description ye.tian 2013-01-24 02:49:34 UTC
System Environment:       
----------------------------------------------
Platform: IVB desktop i7-3770K CPU @ 3.50GHz
Libdrm:	(master)libdrm-2.4.41-3-g303ca37e722e68900cb7eb43ddbef8069b0c711b
Mesa:	(master)85c2e99039394292474b1a84e3dcb2fee30a0836
Xserver:(master)xorg-server-1.13.99.901-36
Kernel: (drm-intel-nightly) 418ccc855c65e0e90f81012bbc34de20b9f45cbd


Bug detailed description:
----------------------------------------------
3DMMES2.0 Taiji/Hoverjet/Uimark performance reduce by 10% with gnome-session.
It's Mesa regression. By bisected, show that 75b7e1df is the first bad commit.

commit 75b7e1df139676f2456fea4d3a57cf0044d8409e
Author: Ian Romanick <ian.d.romanick@intel.com>
Date:   Sun Jan 20 20:39:54 2013 -0500

    intel: Don't expose XRGB8888 visuals any more Performance:

-----------------------------------------------
9bdf5be is 75b7e1d parents commit.
             9bdf5be  75b7e1d      9bdf5be vs. 75b7e1d
gnome-session   117       103              13%

Reproduce steps:
---------------------------------------------
1, xinit&
2, gnome-session&
3, sed s/WIDTH/1920/g taiji.template > tmp1
sed s/HEIGHT/1080/g tmp1 > script.lua
vblank_mode=0 LD_LIBRARY_PATH=lib:$LD_LIBRARY_PATH ../src/common/fm_oes_player/fm_oesplayer
Comment 1 meng 2013-01-31 13:03:43 UTC
The other two subcases Hoverjet and uimark also drop ~8%.
Comment 2 Ian Romanick 2013-02-08 19:09:02 UTC
Is this with or without compositing?  If these numbers are with compositing, is there a performance change without?
Comment 3 ye.tian 2013-02-19 05:17:56 UTC
(In reply to comment #2)
> Is this with or without compositing?  If these numbers are with compositing,
> is there a performance change without?

This is with compositing.
Taiji's FPS value as below:

taiji	              9bdf5be  dd59918(latest)
with     compositing  117	103
without  compositing  170	165
xinit	              161	160
Comment 4 Eric Anholt 2013-02-20 21:04:37 UTC
EGL is choosing X's ARGB visual to match the GL ARGB visual, when it is supposed to be choosing the XRGB X visual, so the compositor is doing a bunch of extra work to blend the result.
Comment 5 ye.tian 2013-02-21 01:30:20 UTC
oh, this bug need to keep opening?
Comment 6 Ian Romanick 2013-02-23 03:05:26 UTC
Created attachment 75395 [details] [review]
egl: Allow 24-bit visuals for 32-bit RGBA8888 configs
Comment 7 Ian Romanick 2013-02-23 03:05:44 UTC
Can you guys retry with this patch?
Comment 8 ye.tian 2013-02-25 02:25:39 UTC
okay, this issue was fixed with above patch. 
please put this patch into mesa branch.
Comment 9 ye.tian 2013-02-28 01:00:27 UTC
It's already on mesa master branch git-68a147e, so verify.
Comment 10 Ian Romanick 2013-03-11 20:00:44 UTC
*** Bug 62144 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.